--- a/project-management-app/src/app/boards/pages/board-page/board-page.component.scss
+++ b/project-management-app/src/app/boards/pages/board-page/board-page.component.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
 .board-page {
-  padding: 1rem 3% 0;
-  min-height: calc(100vh - 5.7rem);
+  padding: 9.5rem 3% 7.3rem;
+  height: calc(100vh - 5.7rem);
 
   @media screen and (max-width: $mobile) {
     height: calc(100vh - 16.3rem);
