--- a/project-management-app/src/app/user/components/form-password/form-password.component.html
+++ b/project-management-app/src/app/user/components/form-password/form-password.component.html
@@ -1,4 +1,4 @@
-<form class="form-password" [formGroup]="form">
+<form class="form-password" [formGroup]="form" (submit)="onSubmit()">
   <app-form-title [title]="title"></app-form-title>
 
   <app-form-field-password label="Current password" [control]="controlOldPassword"></app-form-field-password>
