--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,5 +1,7 @@
 <div (click)="boardRout($event)">
-  <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
+  <div class="board__photo-container" appRandomPhotoBack></div>
+  <div class="board__content-container">
+    <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
     class="board__edit-button" appMouseMoveStopPropagation appMouseClickStopPropagation>edit</mat-icon>
   <span [class.active]="!boardEditMode" class="board__title">&nbsp; {{ board?.title }}</span>
   <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form" appMouseMoveStopPropagation
@@ -21,6 +23,7 @@
       </div>
     </mat-form-field>
   </form>
+  </div>
 </div>
 <button (click)="openDialogToDeleteTheBoard()" mat-fab color="primary" class="board__delete-button">
   <mat-icon>delete_forever</mat-icon>
