--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -47,7 +47,7 @@
   height: auto;
   @extend %flex-column-pattern;
   @include scrollbar(10px, 100%);
-  margin: 4rem;
+  margin: 0 4rem 4rem 4rem;
   padding: 1rem;
   row-gap: 3rem;
   overflow-x: hidden;
