feat: edit changes

--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -123,7 +123,7 @@
   @extend %flex-column-pattern;
   row-gap: 1.5rem;
   border-radius: 2rem;
-  background-color: $color-white-2;
+  background-color: $color-white-darken;
   z-index: 4000;
 }
 
