--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -18,7 +18,7 @@
       <div class="main__search-results-container" [class.active]="searchDisplay">
         <h2>Search Results</h2>
         <p *ngFor="let searchResult of searchResults">
-          {{ searchResults.indexOf(searchResult) + 1 + '. ' }}{{ searchResult }}
+          {{ searchResults.indexOf(searchResult) + 1 + '. ' + searchResult }}
         </p>
       </div>
     </div>
