--- a/project-management-app/src/app/user/components/form-name/form-name.component.html
+++ b/project-management-app/src/app/user/components/form-name/form-name.component.html
@@ -1,4 +1,4 @@
-<form class="form-name" [formGroup]="form" (submit)="onSubmit()">
+<form class="form-name" [formGroup]="form" (submit)="onSubmit(formDirective)" #formDirective="ngForm">
   <app-form-title [title]="title"></app-form-title>
   <app-form-field label="Name" [control]="controlName"></app-form-field>
   <app-form-error [control]="controlName" [errors]="formErrors[controlNameKey]"></app-form-error>
