--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -1,4 +1,6 @@
 <div class="main__container">
   <h1>Boards</h1>
-  <app-board (click)="boardRout($event, board)" *ngFor="let board of boards" [board]="board"></app-board>
+  <div class="main__inner-container">
+    <app-board (click)="boardRout($event, board)" *ngFor="let board of boards" [board]="board"></app-board>
+  </div>
 </div>
