--- a/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
+++ b/project-management-app/src/app/auth/components/auth-main/auth-main.component.scss
@@ -1,12 +1,12 @@
 @import "variables";
+@import "mixins";
 
 .main {
+  @include animateScaleUp();
+
   display: flex;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
-  transform: scaleY(0.8);
-  opacity: 0.1;
-  animation: scaleUp 0.6s forwards ease-in;
 
   @media screen and (max-width: $laptop) {
     justify-content: center;
