--- a/project-management-app/src/app/user/components/tabs/tabs.component.scss
+++ b/project-management-app/src/app/user/components/tabs/tabs.component.scss
@@ -1,6 +1,9 @@
 @import "variables";
 
 .tabs {
+  opacity: 0;
+  animation: showUp 0.4s 0.6s forwards ease-in;
+
   &__item {
     max-width: 50%;
     padding: 2rem;
