--- a/project-management-app/src/app/user/pages/profile-page/profile-page.component.scss
+++ b/project-management-app/src/app/user/pages/profile-page/profile-page.component.scss
@@ -6,6 +6,8 @@
 }
 
 .container {
+  @include animateScaleUp();
+
   padding-top: 0;
   margin-top: -11.3rem;
 
@@ -18,6 +20,9 @@
   &__bg {
     min-height: 20rem;
     background-color: $board-column-title-input;
+    opacity: 0.1;
+    transform: translateY(-100%);
+    animation: goUp 0.6s 0.2s ease-in forwards;
   }
 
   &__content {
@@ -49,6 +54,9 @@
 
   &__img {
     color: $form-bg;
+    transform: scale(0);
+    opacity: 0.5;
+    animation: scale 0.8s 0.3s ease-in-out forwards;
 
     &__icon {
       margin-top: -4rem;
