--- a/project-management-app/src/scss/abstracts/_mixins.scss
+++ b/project-management-app/src/scss/abstracts/_mixins.scss
@@ -94,3 +94,9 @@
     }
   }
 }
+
+@mixin animateScaleUp() {
+  transform: scaleY(0.8);
+  opacity: 0.1;
+  animation: scaleUp 0.6s forwards ease-in;
+}
