--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -39,3 +39,31 @@ input:-webkit-autofill:focus {
     transform: translateY(0);
   }
 }
+
+@keyframes slideColumn {
+  to {
+    opacity: 1;
+    transform: scaleY(100%);
+  }
+}
+
+@keyframes slideInput {
+  to {
+    opacity: 1;
+    transform: scaleX(100%);
+  }
+}
+
+@keyframes slideActions {
+  to {
+    opacity: 1;
+    transform: translateY(100%);
+  }
+}
+
+@keyframes scale {
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
