--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -34,13 +34,14 @@
   top: 0;
   width: 70%;
   height: 100%;
-  padding: 2rem 4rem 2rem 2rem;
+  padding: 2rem 7rem 2rem 3rem;
   transform: skewX(-4deg);
   @extend %normal-text-pattern;
   font-size: 4rem;
   line-height: 4.5rem;
   text-align: center;
   color: white;
+  word-wrap: break-word;
   background-color: $theme-primary-transparent;
   z-index: 1000;
 
@@ -48,6 +49,7 @@
     opacity: 0;
     font-size: 2rem;
     line-height: 2.5rem;
+    padding-right: 5rem;
 
     &.active {
       opacity: 1;
@@ -55,12 +57,25 @@
   }
 }
 
+@media screen and (max-width: $tablet) {
+  :host {
+    height: 50rem;
+  }
+}
+
 @media screen and (max-width: $mobile) {
+  :host {
+    height: 52rem;
+  }
+
   .board__content-container {
     font-size: 3rem;
     line-height: 3.5rem;
     row-gap: 1rem;
 
+    p {
+      padding-right: 0;
+    }
   }
 }
 
@@ -101,12 +116,24 @@
 
 .board-input-form {
   font-size: 3rem;
-  width: 500px;
+  width: 650px;
+}
+
+@media screen and (max-width: $desktop) {
+  .board-input-form {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .board-input-form {
+    width: 310px;
+  }
 }
 
 @media screen and (max-width: $mobile) {
   .board-input-form {
-    width: 250px;
+    width: 180px;
   }
 }
 
