--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -61,7 +61,7 @@ input:-webkit-autofill:focus {
   }
 }
 
-@keyframes scale {
+@keyframes scaleUserImg {
   to {
     opacity: 1;
     transform: scale(1);
