--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -17,9 +17,12 @@
       </div>
       <div class="main__search-results-container" [class.active]="searchDisplay">
         <h2>Search Results</h2>
-        <p *ngFor="let searchResult of searchResults">
-          {{ searchResults.indexOf(searchResult) + 1 + '. ' + searchResult }}
-        </p>
+        <div *ngFor="let searchResult of searchResults" (click)="boardRout($event, searchResult.board)"
+        class="main__search-result-container">
+          <p>
+            {{ searchResults.indexOf(searchResult) + 1 + '. ' + searchResult.text }}
+          </p>
+        </div>
       </div>
     </div>
   </div>
