feat: edit board styles

--- a/project-management-app/src/app/main/pages/main/main.component.scss
+++ b/project-management-app/src/app/main/pages/main/main.component.scss
@@ -76,7 +76,7 @@
   margin-right: 2rem;
   text-align: center;
   color: white;
-  background-color: $board-color;
+  background-color: $board-blue-bg;
   transition: box-shadow 0.3s, transform 0.3s;
 
   &:hover {
