--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $main-bg: #fbfbfd;
 $form-bg: #fff;
 $error-bg: #f44336;
 $board-main-bg: #bd93cd;
+$board-blue-bg: #541690;
 $board-main-bg-darken: #846790;
 $board-column-bg: rgba(0, 0, 0, 0.3);
 $board-column-scrollbar: rgba(0, 0, 0, 0.1);
