--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -7,8 +7,7 @@
   width: 100%;
   height: 40rem;
   overflow: hidden;
-  border-radius: 1rem;
-  background-color: $board-color;
+  border-radius: 2rem;
   cursor: pointer;
   border: 1px solid transparent;
 
@@ -42,7 +41,7 @@
   text-align: center;
   color: white;
   word-wrap: break-word;
-  background-color: $theme-primary-transparent;
+  background: $board-blue-bg;
   z-index: 1000;
 
   p {
