--- a/project-management-app/src/app/core/components/header/create-button/create-button.component.html
+++ b/project-management-app/src/app/core/components/header/create-button/create-button.component.html
@@ -1,5 +1,5 @@
 <button class="btn" mat-raised-button color="primary" (click)="openCreateBoardDialog()">
-  Create new board
+  {{ "button.create-board" | transloco }}
 </button>
 
 <button class="btn--icon" mat-icon-button color="primary" (click)="openCreateBoardDialog()">
