--- a/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.html
+++ b/project-management-app/src/app/auth/components/form-field-password/form-field-password.component.html
@@ -1,5 +1,10 @@
-<app-form-field [type]="isPasswordShown ? typeText : typePassword" [control]="controlValue" [placeholder]="placeholder">
+<app-form-field
+  *transloco="let t; read: 'auth'"
+  [type]="isPasswordShown ? typeText : typePassword"
+  [control]="controlValue"
+  [placeholder]="t(placeholder)"
+>
   <button type="button" mat-button class="form__field__btn" (click)="togglePasswordVisibility()">
-    <mat-icon>{{ isPasswordShown ? 'visibility' : 'visibility_off'}}</mat-icon>
+    <mat-icon>{{ isPasswordShown ? "visibility" : "visibility_off" }}</mat-icon>
   </button>
 </app-form-field>
