--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,8 +1,10 @@
 <div (click)="boardRout()">
   <div class="board__photo-container" appRandomPhotoBack></div>
   <div class="board__content-container">
-    <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
-    class="board__edit-button" appMouseMoveStopPropagation appMouseClickStopPropagation>edit</mat-icon>
+    <button mat-icon-button color="white">
+      <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
+      class="board__edit-button" appMouseMoveStopPropagation appMouseClickStopPropagation>edit</mat-icon>
+    </button>
   <span [class.active]="!boardEditMode" class="board__title">&nbsp; {{ board?.title!.substr(0, 50) }}</span>
   <p [class.active]="!boardEditMode">&nbsp; {{ board?.description!.substr(0, 130) }}</p>
   <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form" appMouseMoveStopPropagation
