--- a/project-management-app/src/app/main/components/board/board.component.scss
+++ b/project-management-app/src/app/main/components/board/board.component.scss
@@ -44,6 +44,10 @@
   background: $board-blue-bg;
   z-index: 100;
 
+  &:hover {
+    color: $theme-accent;
+  }
+
   p {
     opacity: 0;
     font-size: 2rem;
