--- a/project-management-app/src/scss/abstracts/_variables.scss
+++ b/project-management-app/src/scss/abstracts/_variables.scss
@@ -43,6 +43,7 @@ $mobile: 480px;
 $tablet: 768px;
 $laptop: 1024px;
 $desktop: 1200px;
+$notebook: 1440px;
 
 //backgrounds
 $purple-bg: linear-gradient(318deg, $theme-primary 21%, $color-pink 100%);
