fix: edit boards backgrounds

--- a/project-management-app/src/app/main/pages/main/main.component.html
+++ b/project-management-app/src/app/main/pages/main/main.component.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="main__inner-container">
-    <app-board (click)="boardRout($event, board)" *ngFor="let board of boards" [board]="board"
+    <app-board (click)="boardRout($event, board)" *ngFor="let board of initialBoards" [board]="board"
       [mouseExisting]="mouseExisting"></app-board>
   </div>
 </div>
