--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,48 +1,50 @@
 <div (click)="boardRout()">
   <div class="board__photo-container" appRandomPhotoBack></div>
   <div class="board__content-container">
-    <button mat-icon-button color="white">
-      <mat-icon *ngIf="!boardEditMode" [class.hide]="mouseExisting" (click)="boardEditMode=true;" title="Edit"
-      class="board__edit-button" appMouseMoveStopPropagation appMouseClickStopPropagation>edit</mat-icon>
+    <button mat-icon-button color="white" *ngIf="!boardEditMode" [class.hide]="mouseExisting"
+      (click)="boardEditMode=true;" title="Edit" class="board__edit-button" appMouseMoveStopPropagation
+      appMouseClickStopPropagation>
+      <mat-icon>edit</mat-icon>
     </button>
-  <span [class.active]="!boardEditMode" class="board__title">&nbsp; {{ board?.title!.substr(0, 50) }}</span>
-  <p [class.active]="!boardEditMode">&nbsp; {{ board?.description!.substr(0, 130) }}</p>
-  <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form" appMouseMoveStopPropagation
-    appMouseClickStopPropagation>
-    <button mat-icon-button color="white">
+    <span [class.active]="!boardEditMode" class="board__title">{{ boardName }}</span>
+    <p [class.active]="!boardEditMode">{{ boardDescription }}</p>
+    <form *ngIf="boardEditMode" [formGroup]="cardForm" class="board-form" appMouseMoveStopPropagation
+      appMouseClickStopPropagation>
       <mat-icon title="Save"
-      (click)="boardNameChange($event, boardTitleInput.value=boardTitleInput.value.trim(), boardDescriptionInput.value=boardDescriptionInput.value.trim());"
-        #titleInput class="board__save-button">save</mat-icon>
-    </button>
-    <span>&nbsp;</span>
-    <mat-form-field appearance="fill" class="board-input-form">
-      <mat-label>board title editing</mat-label>
-      <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="inputStatus=true">
-      <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
-        <mat-icon>close</mat-icon>
-      </button>
-      <div *ngIf="cardForm.controls['userTitle'].touched">
-        <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The title
-          is required</span>
-        <span *ngIf="userTitle!.errors?.['minlength']">The title is too short</span>
-        <span *ngIf="userTitle!.errors?.['maxlength']">The title is too long</span>
-      </div>
-    </mat-form-field>
-    <mat-form-field appearance="fill" class="board-input-form">
-      <mat-label>board description editing</mat-label>
-      <input matInput type="text" formControlName="userDescription" #boardDescriptionInput (keypress)="inputStatus=true">
-      <button matSuffix mat-icon-button aria-label="Clear" (click)="boardDescriptionInput.value=''">
-        <mat-icon>close</mat-icon>
-      </button>
-      <div *ngIf="cardForm.controls['userDescription'].touched">
-        <span *ngIf="userDescription!.errors?.['required'] || inputStatus===false && !boardDescriptionInput.value.trim()">
-          The description is required
-        </span>
-        <span *ngIf="userDescription!.errors?.['minlength']">The description is too short</span>
-        <span *ngIf="userDescription!.errors?.['maxlength']">The description is too long</span>
-      </div>
-    </mat-form-field>
-  </form>
+        (click)="boardNameChange($event, boardTitleInput.value=boardTitleInput.value.trim(), boardDescriptionInput.value=boardDescriptionInput.value.trim());"
+        class="board__save-button">save</mat-icon>
+      <span>&nbsp;</span>
+      <mat-form-field appearance="fill" class="board-input-form">
+        <mat-label>board title editing</mat-label>
+        <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="inputStatus=true">
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
+          <mat-icon>close</mat-icon>
+        </button>
+        <div *ngIf="cardForm.controls['userTitle'].touched">
+          <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The
+            title
+            is required</span>
+          <span *ngIf="userTitle!.errors?.['minlength']">The title is too short</span>
+          <span *ngIf="userTitle!.errors?.['maxlength']">The title is too long</span>
+        </div>
+      </mat-form-field>
+      <mat-form-field appearance="fill" class="board-input-form">
+        <mat-label>board description editing</mat-label>
+        <input matInput type="text" formControlName="userDescription" #boardDescriptionInput
+          (keypress)="inputStatus=true">
+        <button matSuffix mat-icon-button aria-label="Clear" (click)="boardDescriptionInput.value=''">
+          <mat-icon>close</mat-icon>
+        </button>
+        <div *ngIf="cardForm.controls['userDescription'].touched">
+          <span
+            *ngIf="userDescription!.errors?.['required'] || inputStatus===false && !boardDescriptionInput.value.trim()">
+            The description is required
+          </span>
+          <span *ngIf="userDescription!.errors?.['minlength']">The description is too short</span>
+          <span *ngIf="userDescription!.errors?.['maxlength']">The description is too long</span>
+        </div>
+      </mat-form-field>
+    </form>
   </div>
 </div>
 <button (click)="openDialogToDeleteTheBoard()" mat-fab color="primary" class="board__delete-button">
