--- a/project-management-app/src/app/main/pages/test/test.component.html
+++ b/project-management-app/src/app/main/pages/test/test.component.html
@@ -60,8 +60,9 @@
                 addTask(board.id, column.id, {
                   title: taskTitle,
                   description: taskDescription,
+                  done: false,
                   order: findLastOrder(column.tasks),
-                  userId: '1be26d36-9753-4236-b277-87137ef33e7a'
+                  userId: defaultUser
                 })
               "
             >
