feat: edit BoardHandlingService

--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -1,4 +1,4 @@
-<div (click)="boardRout()">
+<div (click)="openBoard()">
   <div class="board__photo-container" appRandomPhotoBack></div>
   <div class="board__content-container">
     <button mat-icon-button color="white" *ngIf="!boardEditMode" [class.hide]="mouseExisting"
