--- a/project-management-app/src/app/main/components/board/board.component.html
+++ b/project-management-app/src/app/main/components/board/board.component.html
@@ -15,16 +15,16 @@
       <span>&nbsp;</span>
       <mat-form-field appearance="fill" class="board-input-form">
         <mat-label>board title editing</mat-label>
-        <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="inputStatus=true">
+        <input matInput type="text" formControlName="userTitle" #boardTitleInput (keypress)="editMode=true">
         <button matSuffix mat-icon-button aria-label="Clear" (click)="boardTitleInput.value=''">
           <mat-icon>close</mat-icon>
         </button>
         <div *ngIf="cardForm.controls['userTitle'].touched">
-          <span *ngIf="userTitle!.errors?.['required'] || inputStatus===false && !boardTitleInput.value.trim()">The
+          <span *ngIf="userTitle!.errors?.['required'] || editMode===false && !boardTitleInput.value.trim()">The
             title
             is required</span>
           <span
-            *ngIf="userTitle!.errors?.['minlength'] || inputStatus===false && boardTitleInput.value.trim().length<3">The
+            *ngIf="userTitle!.errors?.['minlength'] || editMode===false && boardTitleInput.value.trim().length<3">The
             title is too short</span>
           <span *ngIf="userTitle!.errors?.['maxlength']">The title is too long</span>
         </div>
@@ -32,17 +32,17 @@
       <mat-form-field appearance="fill" class="board-input-form">
         <mat-label>board description editing</mat-label>
         <input matInput type="text" formControlName="userDescription" #boardDescriptionInput
-          (keypress)="inputStatus=true">
+          (keypress)="editMode=true">
         <button matSuffix mat-icon-button aria-label="Clear" (click)="boardDescriptionInput.value=''">
           <mat-icon>close</mat-icon>
         </button>
         <div *ngIf="cardForm.controls['userDescription'].touched">
           <span
-            *ngIf="userDescription!.errors?.['required'] || inputStatus===false && !boardDescriptionInput.value.trim()">
+            *ngIf="userDescription!.errors?.['required'] || editMode===false && !boardDescriptionInput.value.trim()">
             The description is required
           </span>
           <span
-            *ngIf="userDescription!.errors?.['minlength'] || inputStatus===false && boardTitleInput.value.trim().length<3">The
+            *ngIf="userDescription!.errors?.['minlength'] || editMode===false && boardTitleInput.value.trim().length<3">The
             description is too short</span>
           <span *ngIf="userDescription!.errors?.['maxlength']">The description is too long</span>
         </div>
